--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 { "name": "sistyl"
 , "description": "Simple JSON-to-CSS style sheet library"
-, "version": "0.2.2"
+, "version": "0.2.3"
 , "license": "MIT"
 , "keywords": [ "style", "css" ]
 , "bugs": "https://github.com/goto-bus-stop/sistyl/issues"
@@ -19,5 +19,5 @@
 , "scripts":
   { "babel": "./node_modules/.bin/babel --out-dir lib src"
   , "browser": "browserify -e src/sistyl.js -t babelify -o sistyl.js -s sistyl"
-  , "test": "./node_modules/.bin/mocha -r babel/register" }
+  , "test": "./node_modules/.bin/mocha --compilers js:babel/register" }
 }
