--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,12 @@
 { "name": "sistyl"
 , "description": "Simple JSON-to-CSS style sheet library"
-, "version": "0.4.1"
+, "version": "0.4.2"
 , "license": "MIT"
 , "keywords": [ "style", "css" ]
 , "homepage": "https://github.com/goto-bus-stop/sistyl"
 , "authors": [ "René Kooi <rene@kooi.me>" ]
 , "main": "lib/sistyl.js"
-, "moduleType": [ "node" ]
+, "moduleType": [ "node", "amd", "globals" ]
 , "ignore":
   [ "node_modules"
   , "bower_components"
