split and regroup grouped selectors for more natural nesting
Now this does what you'd expect:

{
  '.score': {
    '.icon-woot, .icon-meh, .icon-grab': {
      'background': 'url("icons.png")'
    }
  }
}

Becomes:
".score .icon-woot, .score .icon-meh, .score .icon-grab { /**/ }"

...instead of the weird and non-useful previous compilation to
".score .icon-woot, .icon-meh, .icon-grab { /**/ }".

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   { "type": "git"
   , "url" : "http://github.com/goto-bus-stop/sistyl.git"
   }
+, "dependencies":
+  { "split-selector": "^1.0.0" }
 , "devDependencies":
   { "babel": "5.x"
   , "babelify": "6.x"
