--- a/package.json
+++ b/package.json
@@ -14,15 +14,39 @@
     "split-selector": "^1.0.0"
   },
   "devDependencies": {
-    "babel": "6.5.2",
+    "babel-cli": "^6.7.7",
+    "babel-plugin-transform-es2015-arrow-functions": "^6.7.7",
+    "babel-plugin-transform-es2015-block-scoping": "^6.7.1",
+    "babel-plugin-transform-es2015-classes": "^6.7.7",
+    "babel-plugin-transform-es2015-computed-properties": "^6.6.5",
+    "babel-plugin-transform-es2015-modules-umd": "^6.6.5",
+    "babel-plugin-transform-es2015-parameters": "^6.7.0",
+    "babel-plugin-transform-es2015-template-literals": "^6.6.5",
+    "babel-register": "^6.7.2",
     "babelify": "7.2.0",
     "browserify": "13.0.0",
     "mocha": "2.x"
   },
+  "babel": {
+    "plugins": [
+      "transform-es2015-arrow-functions",
+      "transform-es2015-block-scoping",
+      [
+        "transform-es2015-classes",
+        {
+          "loose": true
+        }
+      ],
+      "transform-es2015-computed-properties",
+      "transform-es2015-modules-umd",
+      "transform-es2015-parameters",
+      "transform-es2015-template-literals"
+    ]
+  },
   "scripts": {
-    "babel": "babel --modules umd --out-dir lib src",
+    "babel": "babel --out-dir lib src",
     "browser": "browserify -e src/sistyl.js -t babelify -o sistyl.js -s sistyl",
     "prepublish": "npm run babel",
-    "test": "mocha --compilers js:babel/register"
+    "test": "mocha --compilers js:babel-register"
   }
 }
