--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "babel-plugin-transform-es2015-parameters": "^6.7.0",
     "babel-plugin-transform-es2015-template-literals": "^6.6.5",
     "babel-register": "^6.7.2",
-    "babelify": "7.2.0",
-    "browserify": "13.1.0",
+    "babelify": "^7.2.0",
+    "browserify": "^13.1.0",
     "mocha": "^3.0.2"
   },
   "babel": {
