--- a/package.json
+++ b/package.json
@@ -14,32 +14,11 @@
     "split-selector": "^1.0.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.7.7",
-    "babel-plugin-transform-es2015-arrow-functions": "^6.7.7",
-    "babel-plugin-transform-es2015-block-scoping": "^6.7.1",
-    "babel-plugin-transform-es2015-computed-properties": "^6.6.5",
-    "babel-plugin-transform-es2015-parameters": "^6.7.0",
-    "babel-plugin-transform-es2015-shorthand-properties": "^6.24.1",
-    "babel-plugin-transform-es2015-template-literals": "^6.6.5",
-    "babel-register": "^6.7.2",
-    "babelify": "^7.2.0",
     "browserify": "^14.1.0",
     "mocha": "^3.0.2"
   },
-  "babel": {
-    "plugins": [
-      "transform-es2015-arrow-functions",
-      "transform-es2015-block-scoping",
-      "transform-es2015-computed-properties",
-      "transform-es2015-parameters",
-      "transform-es2015-shorthand-properties",
-      "transform-es2015-template-literals"
-    ]
-  },
   "scripts": {
-    "babel": "babel --out-dir lib src",
-    "browser": "browserify -e src/sistyl.js -t babelify -o sistyl.js -s sistyl",
-    "prepublish": "npm run babel",
-    "test": "mocha --compilers js:babel-register"
+    "browser": "browserify -e lib/sistyl.js -o sistyl.js -s sistyl",
+    "test": "mocha"
   }
 }
